Issue with footer images not showing up resolved + css updated in-line with changes

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -1,47 +1,27 @@
-/* * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-  } */
-  
-  .footer-container {
-    /* background-color: #212329; */
+.footer-container {
     background-color: #0D0D0D;
-    padding-bottom: 4rem 0 4rem 0;
   }
   
   .footer {
-    /* width: 80%; */
-    /* height: 40vh; */
-    /* background-color: #212329; */
-    /* background-color: blue; */
     color: #fff;
-    display: flex; /* this part affects display of footer categories - double check*/
-    justify-content: center;
-    /* flex-wrap: wrap; */
-    margin: 0 auto;
-    /* flex-direction: row; */
+    display: flex; 
   }
   
   .footer-heading {
-    /* display: flex; */
     flex-direction: column;
-    margin-right: 4rem;
-    /* background-color: #F9423D; */
+    margin-right: 6rem;
+    margin-left: 5.5rem;
     padding-top: 4rem;
   }
   
   .footer-heading h2 {
     margin-bottom: 2rem;
-    /* background-color: aqua; */
   }
   
   .footer-heading a {
     color: #fff;
     text-decoration: none;
     margin-bottom: 0.5rem;
-    /* background-color: purple; */
   }
   
   .footer-heading a:hover {
@@ -49,12 +29,18 @@
     transition: 0.3s ease-out;
   }
 
+  .footer-email-form {
+   margin-top: -75%;
+   margin-left: 75%;
+  }
+
+
   .footer-email-form h2 {
     margin-bottom: 1rem;
     color: #fff;
     padding-top: 5rem;
     padding-left: 2rem;
-    /* background-color: chartreuse; */
+    white-space: nowrap;
   }
   
   #footer-email {
@@ -66,7 +52,6 @@
     padding-left: 0.5rem;
     font-size: 1rem;
     margin-bottom: 1rem;
-    /* background-color: yellow; */
     display: flex;
   }
 
@@ -77,7 +62,6 @@
   
   #footer-email::placeholder {
     color: #b1b1b1;
-    /* background-color: darkgreen; */
   }
   
   #footer-email-btn {
@@ -93,40 +77,70 @@
   
   #footer-email-btn:hover {
     cursor: pointer;
-    /* background-color: #FECEDE; */
     background-color: #BD1954;
     transition: all 0.4s ease-out ;
   }
   
-  .btn{
-margin: -0.5rem;
-padding-left: 1.5rem;  
-}
+  .btn {
+  margin: -0.5rem;
+  padding-left: 1.5rem;  
+  }
   
-  .footer-payment h2 {
-    color: #fff;
-    margin-bottom: 1.5rem;
-    /* background-color: saddlebrown; */
+  .footer-icons {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 3rem;
+    margin-left: 6%;
+    margin-right: 6%;
   }
 
   .footer-payment {
-background-color: chartreuse;
+    margin: -1rem;
   }
 
-  .footer-apps {
-    background-color: aqua;
+  .footer-payment h2 {
+    color: #fff;
+    padding: 10px;
+    margin-left: 2.5rem;
+  }
+
+ .payment-methods {
+  height: 80px;
+ }
+
+  .footer-store-logo {
+    display: inline-flex;
+  }
+
+  .footer-apple-store {
+    height: 50px;
+    margin: 20px;
+}
+
+  .footer-google-store {
+    height: 58px;
+    margin-top: 1rem;
   }
   
   .footer-apps h2 {
     color: #fff;
-    margin-bottom: 1.5rem;
-    /* background-color: deepskyblue; */
+    margin-left: 6.5rem;
   }
 
   .footer-socials h2 {
     color: #fff;
-    margin-bottom: 1.5rem;
-    /* background-color: fuchsia; */
+    margin-left: 2rem;
+    margin-top: 0.5rem;
+  }
+
+  .footer-socials a {
+    list-style: none;
+  }
+
+  .social-icon {
+    height: 35px;
+    margin-top: 1rem;
+    margin: 0.5rem;
   }
 
   .footer-bottom {
@@ -135,19 +149,7 @@ background-color: chartreuse;
     padding: 1rem;
     background-color: #0D0007;
   }
-  
-  /* .app-store-footer-link {
-    background-image: url(https://www.newlook.com/_ui/v_34514656bdd5cf8414220b8cf96259fc154c6ad3/common/public/image/icons/appStore.svg);
-      background-position-x: initial;
-      background-position-y: initial;
-      background-size: initial;
-      background-attachment: initial;
-      background-origin: initial;
-      background-clip: initial;
-      background-color: initial;
-    width: 100px;
-    height: 35px;  
-  } */
+
   
   @media screen and (max-width: 1150px) {
     .footer {
@@ -158,12 +160,14 @@ background-color: chartreuse;
     }
   }
   
+
   @media screen and (max-width: 820px) {
     .footer {
       padding-top: 2rem;
     }
   }
   
+
   @media screen and (max-width: 720px) {
     .footer-3 {
       display: none;
